# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepxromm-fix"
version = "0.1.1"
authors = [{name = "Sam DeLap", email = "sjcdelap@gmail.com"}]
description = "A set of user-friendly tools for DeepLabCut-XMALab marker tracking. Normally under deepxromm, but I as the author do not currently have access"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["deepxromm", "XMALab", "DeepLabCut", "XROMM"]
dependencies = [
    "blend_modes",
    "deeplabcut[tf]",
    "imagehash"
]
requires-python = ">=3.9"

[project.optional-dependencies]
cli = ["ipython"]

[project.urls]
Homepage = "https://github.com/sam-delap/deepxromm"
Documentation = "https://sam-delap.github.io/deepxromm"

[tool.setuptools]
packages = ["deepxromm"]

[tool.setuptools.package-data]
deepxromm = ["*.yaml"]
