# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deepxromm"
dynamic = ["version"]
authors = [{name = "Sam DeLap", email = "sjcdelap@gmail.com"}]
description = "A set of user-friendly tools for DeepLabCut-XMALab marker tracking"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["deepxromm", "XMALab", "DeepLabCut", "XROMM"]
dependencies = [
    "blend_modes",
    "deeplabcut[tf]",
    "imagehash",
    "numpy<2"
]
requires-python = ">=3.9"

[project.optional-dependencies]
cli = ["ipython"]

[project.urls]
Homepage = "https://github.com/sam-delap/deepxromm"
Documentation = "https://sam-delap.github.io/deepxromm"

[tool.setuptools]
packages = ["deepxromm"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
deepxromm = ["*.yaml"]
